# personal-agentic-os-template

./: .gitignore  README.md  pyproject.toml
docs/: adoption-checklist.md  issue-checklist.md  project-mappings.md  roadmap.md  security-privacy.md  usage.md
docs/mappings/: health-metrics-forecaster.md  mlx-grammar.md  p3.md  project-ideas.md  signal-newsletter.md  trade-thesis-journal.md
docs/plans/: 2026-05-04-personal-agentic-os-template.md
docs/retrospectives/: v1-readiness-review.md
docs/source/: project-ideas-33.md
examples/daily-brief/: README.md  sample-items.json
src/personal_agentic_os_template/: __init__.py  cli.py  example.py  layers.py  scaffold.py
template/: layers.yaml
template/automations/: README.md
template/connections/: README.md
template/context/: README.md
template/identity/: README.md
template/memory/: README.md
template/skills/: README.md
template/verification/: README.md
tests/: test_cli.py  test_closeout_docs.py  test_example_app.py  test_layers.py  test_project_mappings.py  test_scaffold_validation.py
